--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fis3-parser-vue-component",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A parser plugin for fis3 to parser vue component.",
   "keywords": [
     "fis3",
@@ -11,7 +11,8 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "parse5": "^2.1.5"
+    "parse5": "^2.1.5",
+    "vue-template-validator": "^1.1.5"
   },
   "devDependencies": {},
   "scripts": {
