--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fis3-parser-vue-component",
-  "version": "4.0.3",
+  "version": "5.0.0",
   "description": "A parser plugin for fis3 to parser vue component.",
   "keywords": [
     "fis3",
@@ -11,10 +11,13 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "chalk": "^1.1.3",
     "de-indent": "^1.0.2",
     "hash-sum": "^1.0.2",
     "object-assign": "^4.1.0",
     "parse5": "^2.1.5",
+    "vue-template-compiler": "^2.1.6",
+    "vue-template-es2015-compiler": "^1.4.0",
     "vue-template-validator": "^1.1.5"
   },
   "devDependencies": {},
