--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^1.1.3",
     "hash-sum": "^1.0.2",
     "object-assign": "^4.1.0",
+    "uglify-js": "^2.8.14",
     "vue-template-compiler": "^2.1.6",
     "vue-template-es2015-compiler": "^1.4.0"
   },
