--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "main": "index.js",
   "dependencies": {
     "chalk": "^1.1.3",
+    "deasync": "^0.1.9",
     "hash-sum": "^1.0.2",
+    "lru-cache": "^4.0.2",
     "object-assign": "^4.1.0",
+    "postcss": "^5.2.16",
+    "postcss-selector-parser": "^2.2.3",
     "uglify-js": "^2.8.14",
     "vue-template-compiler": "^2.1.6",
     "vue-template-es2015-compiler": "^1.4.0"
